--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "google-maps-pins",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
